# ChangeLog for net-im/gajim
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.15 2006/07/06 15:57:54 humpback Exp $

*gajim-0.10.1 (06 Jul 2006)

  06 Jul 2006; Gustavo Felisberto <humpback@gentoo.org>; -gajim-0.9.ebuild,
  -gajim-0.9.1.ebuild, +gajim-0.10.1.ebuild:
  Adding new very improved version and removed 0.9 releases. Arch teams please
  see the deps to have this stable. Also I removed the ALPHA keyword because
  of a dep that was not keyworded.

  24 May 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove svyatogor from metadata.xml, bug 131936.

*gajim-0.9.1 (27 Dec 2005)

  27 Dec 2005; Sergey Kuleshov <svyatogor@gentoo.org> +gajim-0.9.1.ebuild:
  New version. Bug fixes only.

*gajim-0.9 (25 Dec 2005)

  25 Dec 2005; Sergey Kuleshov <svyatogor@gentoo.org>
  -files/gajim-0.7.1-multilib.patch, +files/gajim_0.9_muc_disconnect.patch,
  -gajim-0.7.1.ebuild, -gajim-0.8.ebuild, -gajim-0.8-r1.ebuild,
  +gajim-0.9.ebuild:
  New version of Gajim with a lot of new features. Temporarily removed ~amd64
  from KEYWORDS until gcc4 makes it to unstable. Ebuild by Lukáš Polívka.
  
  Removed old unstable ebuilds (previous to 0.8.2).

  26 Sep 2005; Luis Medinas <metalgod@gentoo.org> gajim-0.8.2.ebuild:
  Marked Stable on amd64

  15 Sep 2005; Aron Griffis <agriffis@gentoo.org> gajim-0.8.2.ebuild:
  Mark 0.8.2 stable on alpha

*gajim-0.8.2 (12 Sep 2005)

  12 Sep 2005; Sergey Kuleshov <svyatogor@gentoo.org> +gajim-0.8.2.ebuild:
  New version added - 0.8.2

  28 Aug 2005; Sergey Kuleshov <svyatogor@gentoo.org> gajim-0.8-r1.ebuild:
  Verify that pygtk was emerged with USE=gnome, cause we need pygton glade modules.

*gajim-0.8-r1 (27 Aug 2005)

  27 Aug 2005; Sergey Kuleshov <svyatogor@gentoo.org> +gajim-0.8-r1.ebuild:
  New ebuild version wich supports dbus and srv USE flags. Also added ~ppc to
  use flags, as it is reported to be ok by one of the users.
