@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/Attic/gajim-0.10.1.ebuild,v 1.2 2006/07/06 16:30:12 humpback Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/Attic/gajim-0.10.1.ebuild,v 1.3 2006/07/07 00:17:31 lu_zero Exp $
 
 inherit virtualx multilib eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.gajim.org/downloads/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ppc ~x86"
 IUSE="dbus gnome libnotify nls spell srv"
 
 RDEPEND="!<=dev-python/gnome-python-2
