@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/notification-daemon/Attic/notification-daemon-0.3.5.ebuild,v 1.2 2006/06/27 05:37:19 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/notification-daemon/Attic/notification-daemon-0.3.5.ebuild,v 1.3 2006/07/07 00:16:37 lu_zero Exp $
 
 inherit gnome2
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.galago-project.org/files/releases/source/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~amd64 ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
 DEPEND=">=dev-libs/glib-2.4.0
