@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/notification-daemon
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/notification-daemon/ChangeLog,v 1.8 2006/06/27 05:37:18 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/notification-daemon/ChangeLog,v 1.9 2006/07/07 00:16:37 lu_zero Exp $
+
+  06 Jul 2006; Luca Barbato <lu_zero@gentoo.org>
+  notification-daemon-0.3.5.ebuild:
+  Marked ppc
 
   27 Jun 2006; Markus Rothe <corsair@gentoo.org>
   notification-daemon-0.3.5.ebuild:
