@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gajim
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.15 2006/07/06 15:57:54 humpback Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.16 2006/07/07 00:17:31 lu_zero Exp $
+
+  07 Jul 2006; Luca Barbato <lu_zero@gentoo.org> gajim-0.10.1.ebuild:
+  Marked ppc
 
 *gajim-0.10.1 (06 Jul 2006)
 
